refactor(tests): improved the readability of the tests by using a custom assertion library